// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grammar should parse case-0.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 4,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 1,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 2,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 3,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 5,
  "kind": "program",
}
`;

exports[`grammar should parse case-1.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 15,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20;
},
      "return": {
        "id": 6,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 13,
            "kind": "op_binary",
            "left": {
              "id": 11,
              "kind": "op_binary",
              "left": {
                "id": 9,
                "kind": "op_binary",
                "left": {
                  "id": 7,
                  "kind": "number",
                  "ref": 0,
                  "value": 0n,
                },
                "op": "+",
                "ref": 0 + 1,
                "right": {
                  "id": 8,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "op": "*",
              "ref": (0 + 1) * 10,
              "right": {
                "id": 10,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
            },
            "op": "/",
            "ref": (0 + 1) * 10 / 20,
            "right": {
              "id": 12,
              "kind": "number",
              "ref": 20,
              "value": 20n,
            },
          },
          "id": 14,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20;,
        },
      ],
    },
  ],
  "id": 16,
  "kind": "program",
}
`;

exports[`grammar should parse case-2.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 58,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10;
},
      "return": {
        "id": 47,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 56,
            "kind": "op_binary",
            "left": {
              "id": 54,
              "kind": "op_binary",
              "left": {
                "id": 52,
                "kind": "op_binary",
                "left": {
                  "id": 50,
                  "kind": "op_binary",
                  "left": {
                    "id": 48,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 49,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 51,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 53,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10,
            "right": {
              "id": 55,
              "kind": "number",
              "ref": 10,
              "value": 10n,
            },
          },
          "id": 57,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10;,
        },
      ],
    },
  ],
  "id": 59,
  "kind": "program",
}
`;

exports[`grammar should parse case-3.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 73,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId;
},
      "return": {
        "id": 60,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 71,
            "kind": "op_binary",
            "left": {
              "id": 67,
              "kind": "op_binary",
              "left": {
                "id": 65,
                "kind": "op_binary",
                "left": {
                  "id": 63,
                  "kind": "op_binary",
                  "left": {
                    "id": 61,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 62,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 64,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 66,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10 * someId,
            "right": {
              "id": 70,
              "kind": "op_binary",
              "left": {
                "id": 68,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
              "op": "*",
              "ref": 10 * someId,
              "right": {
                "id": 69,
                "kind": "id",
                "ref": someId,
                "value": "someId",
              },
            },
          },
          "id": 72,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId;,
        },
      ],
    },
  ],
  "id": 74,
  "kind": "program",
}
`;

exports[`grammar should parse case-4.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 96,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;
},
      "return": {
        "id": 75,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 94,
            "kind": "op_binary",
            "left": {
              "id": 86,
              "kind": "op_binary",
              "left": {
                "id": 82,
                "kind": "op_binary",
                "left": {
                  "id": 80,
                  "kind": "op_binary",
                  "left": {
                    "id": 78,
                    "kind": "op_binary",
                    "left": {
                      "id": 76,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 77,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 79,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 81,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 85,
                "kind": "op_binary",
                "left": {
                  "id": 83,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 84,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10,
            "right": {
              "id": 93,
              "kind": "op_binary",
              "left": {
                "id": 89,
                "kind": "op_binary",
                "left": {
                  "id": 87,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 88,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 10,
              "right": {
                "id": 92,
                "kind": "op_binary",
                "left": {
                  "id": 90,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 10,
                "right": {
                  "id": 91,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
            },
          },
          "id": 95,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;,
        },
      ],
    },
  ],
  "id": 97,
  "kind": "program",
}
`;

exports[`grammar should parse case-5.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 121,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);
},
      "return": {
        "id": 98,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 119,
            "kind": "op_binary",
            "left": {
              "id": 109,
              "kind": "op_binary",
              "left": {
                "id": 105,
                "kind": "op_binary",
                "left": {
                  "id": 103,
                  "kind": "op_binary",
                  "left": {
                    "id": 101,
                    "kind": "op_binary",
                    "left": {
                      "id": 99,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 100,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 102,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 104,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 108,
                "kind": "op_binary",
                "left": {
                  "id": 106,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 107,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10),
            "right": {
              "id": 118,
              "kind": "op_binary",
              "left": {
                "id": 112,
                "kind": "op_binary",
                "left": {
                  "id": 110,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 111,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 123.add(10),
              "right": {
                "id": 117,
                "kind": "op_binary",
                "left": {
                  "id": 113,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 123.add(10),
                "right": {
                  "args": [
                    {
                      "id": 115,
                      "kind": "number",
                      "ref": 10,
                      "value": 10n,
                    },
                  ],
                  "id": 116,
                  "kind": "op_call",
                  "name": "add",
                  "ref": 123.add(10),
                  "src": {
                    "id": 114,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                },
              },
            },
          },
          "id": 120,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);,
        },
      ],
    },
  ],
  "id": 122,
  "kind": "program",
}
`;

exports[`grammar should parse case-6.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 147,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));
},
      "return": {
        "id": 123,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 145,
            "kind": "op_binary",
            "left": {
              "id": 134,
              "kind": "op_binary",
              "left": {
                "id": 130,
                "kind": "op_binary",
                "left": {
                  "id": 128,
                  "kind": "op_binary",
                  "left": {
                    "id": 126,
                    "kind": "op_binary",
                    "left": {
                      "id": 124,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 125,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 127,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 129,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 133,
                "kind": "op_binary",
                "left": {
                  "id": 131,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 132,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10)),
            "right": {
              "id": 144,
              "kind": "op_binary",
              "left": {
                "id": 137,
                "kind": "op_binary",
                "left": {
                  "id": 135,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 136,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < abs(123.add(10)),
              "right": {
                "id": 143,
                "kind": "op_binary",
                "left": {
                  "id": 138,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < abs(123.add(10)),
                "right": {
                  "args": [
                    {
                      "args": [
                        {
                          "id": 140,
                          "kind": "number",
                          "ref": 10,
                          "value": 10n,
                        },
                      ],
                      "id": 141,
                      "kind": "op_call",
                      "name": "add",
                      "ref": 123.add(10),
                      "src": {
                        "id": 139,
                        "kind": "number",
                        "ref": 123,
                        "value": 123n,
                      },
                    },
                  ],
                  "id": 142,
                  "kind": "op_static_call",
                  "name": "abs",
                  "ref": abs(123.add(10)),
                },
              },
            },
          },
          "id": 146,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));,
        },
      ],
    },
  ],
  "id": 148,
  "kind": "program",
}
`;

exports[`grammar should parse case-7.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 151,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 149,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 150,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 155,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 152,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 153,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 154,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 159,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Bool {
    return 0;
},
      "return": {
        "id": 156,
        "kind": "type_ref",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
      "statements": [
        {
          "expression": {
            "id": 157,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 158,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 160,
  "kind": "program",
}
`;

exports[`grammar should parse case-8.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "id": 161,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_1",
      "ref": @name(native_name_1)
native testFunc();,
      "return": null,
    },
    {
      "args": [],
      "id": 163,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_2",
      "ref": @name(native_name_2)
native testFunc(): Int;,
      "return": {
        "id": 162,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
    },
    {
      "args": [],
      "id": 165,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_3",
      "ref": @name(native_name_3)
native testFunc(): Bool;,
      "return": {
        "id": 164,
        "kind": "type_ref",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
    },
  ],
  "id": 166,
  "kind": "program",
}
`;

exports[`grammar should parse case-9.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 177,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + 3!! > 123;
},
      "return": {
        "id": 167,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 175,
            "kind": "op_binary",
            "left": {
              "id": 173,
              "kind": "op_binary",
              "left": {
                "id": 170,
                "kind": "op_binary",
                "left": {
                  "id": 168,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 169,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + 3!!,
              "right": {
                "id": 172,
                "kind": "op_unary",
                "op": "!!",
                "ref": 3!!,
                "right": {
                  "id": 171,
                  "kind": "number",
                  "ref": 3,
                  "value": 3n,
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + 3!! > 123,
            "right": {
              "id": 174,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 176,
          "kind": "statement_return",
          "ref": return 1 + 2 + 3!! > 123;,
        },
      ],
    },
  ],
  "id": 178,
  "kind": "program",
}
`;

exports[`grammar should parse case-10.tact 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 29,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 17,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 27,
            "kind": "op_binary",
            "left": {
              "id": 25,
              "kind": "op_binary",
              "left": {
                "id": 20,
                "kind": "op_binary",
                "left": {
                  "id": 18,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 19,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 24,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 23,
                  "kind": "op_binary",
                  "left": {
                    "id": 21,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 22,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 26,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 28,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 30,
  "kind": "program",
}
`;

exports[`grammar should parse case-11.tact 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 33,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 32,
            "kind": "type_ref",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 45,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 31,
        "kind": "type_ref",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 43,
            "kind": "op_binary",
            "left": {
              "id": 41,
              "kind": "op_binary",
              "left": {
                "id": 36,
                "kind": "op_binary",
                "left": {
                  "id": 34,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 35,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 40,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 39,
                  "kind": "op_binary",
                  "left": {
                    "id": 37,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 38,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 42,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 44,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 46,
  "kind": "program",
}
`;
